tests/integration/snapshots/integration__commands__format__STRING_ALL_BASIC_ESCAPES.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
"\"\\\/\n\r\t\b\f"
stdout ---
"\"\\\/\n\r\t\b\f"

stderr ---
