tests/integration/snapshots/integration__commands__format__STRING_BACKSPACE_ESCAPE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
"\b"
stdout ---
"\b"

stderr ---
