tests/integration/snapshots/integration__commands__format__STRING_SURROGATE_PAIR.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
"\uD83D\uDE00"
stdout ---
"\uD83D\uDE00"

stderr ---
