tests/integration/snapshots/integration__commands__format__STRING_UNESCAPED_UNICODE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
"中文"
stdout ---
"中文"

stderr ---
