tests/integration/snapshots/integration__commands__format__STRING_UNICODE_ESCAPE_CONTROL.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
"\u0000"
stdout ---
"\u0000"

stderr ---
