tests/integration/snapshots/integration__commands__format__STRING_UNICODE_ESCAPE_PRINTABLE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
"\u0041"
stdout ---
"\u0041"

stderr ---
